[package]
name = "tasque"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
log = "0.4.22"
futures = "0.3.31"
tracing-subscriber = "0.3.19"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }

