[package]
name = "tasque"
version = "0.1.1"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
log = "0.4.22"
futures = "0.3.31"
thiserror = "2.0.9"
tracing-subscriber = "0.3.19"
crossbeam = "0.8.4"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }

